[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hhcrsp-toolbox"
version = "0.1.0b"
dependencies = [
    "click",
    "pydantic",
    "tabulate",
    "pandas",
    "numpy",
    "matplotlib",
    "plotly"
]
requires-python = ">=3.10"
description = "Toolbox for generating instances and validating instances of solutions for the Home Healthcare Routing and Scheduling Problem"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
generator = [
    "geopandas",
    "pyyaml",
    "pyosrm@git+https://github.com/liuq/pyosrm"
]

[project.scripts]
hhcrsp = "hhcrsp.scripts.cli:main_cli"

[tool.poetry.dependencies]
click = "^8.0.1"
pydantic = "^1.8.2"
pandas = "^1.3.3"
tabulate = "^0.8.9"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
plotly = "^5.3.1"

