[tool.poetry]
name = "hhcrsp-toolbox"
version = "0.1.0b"
description = "Toolbox for validating instances and solutions of the Home Healthcare Routing and Scheduling Problem"
authors = ["Luca Di Gaspero <luca.digaspero@uniud.it>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "hhcrsp" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
click = "^8.1.7"
pydantic = "^2.6.1"
tabulate = "^0.9.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
scipy = "^1.12.0"
beaupy = "^3.7.2"

[tool.poetry.scripts]
hhcrsp = "hhcrsp.scripts.cli:main_cli"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.1"
coverage = "^7.4.3"


[tool.poetry.group.generator.dependencies]
platformdirs = "^4.2.0"
geopandas = "^0.14.3"
requests = "^2.31.0"
geopy = "^2.4.1"
pyproj = "^3.6.1"
shapely = "^2.0.3"
humanize = "^4.9.0"
folium = "^0.15.1"
pyosrm = {git = "https://github.com/liuq/pyosrm"}
autopage = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
